Add a config parameter dialog-autoclose that can be set to yes or no In the graph and suite create and view pages, modals will autoclose if the dialog-autoclose parameter is set to yes
Fixes Improvement:

IOPSGRAPH-32 - Make auto-close optional on graph and suite rendering modal overlays

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -4,6 +4,7 @@ logfile = graphtool.log
 loglevel = DEBUG
 httpport = 8080
 local_ip = 50.0.96.196
+dialog_autoclose = yes
 
 [graph]
 duration_length = 2
