Added collection of metrics from ODW database if one is specified
This addresses issue:

IOPSGRAPH-28 - Add Opsview ODW (MySQL) database support for high density data

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -30,10 +30,10 @@ password = initial
 shared_secret = jds9ned893nnd9fj
 api_tool = rest/graph
 rescan = 3600
-odw_host=opsview.netgeeks.net
+odw_host=ng-opsview.netgeeks.net
 odw_db = odw
 odw_user = opsgraph
-odw_pass = slUt(JhD&jd8
+odw_pass = slOt9JhD7jd8
 
 [opsview_server_kixeye]
 name = kixeye
