Added rouding function using time_round value from config file to specify the frequency   in number of seconds to round all x values to
Addresses issue:

IOPSGRAPH-28 - Add Opsview ODW (MySQL) database support for high density data

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -11,6 +11,7 @@ duration_length = 2
 duration_unit = d
 date_format = %b %d %H:%M
 autocomplete_series = yes
+round_time=300
 
 [database]
 dbname = graphtool
