--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -1,10 +1,13 @@
 [general]
-logpath = /home/graphtool/shared_work/Opsgraph/log
+logpath = /home/chris/shared_work/Opsgraph/log
 logfile = graphtool.log
 loglevel = DEBUG
-httpport = 8080
+httpport = 8880
+sslport = 8443
 local_ip = 50.0.96.196
 dialog_autoclose = yes
+sslKey = /var/certs/graphtool.netgeeks.net
+sslCert = /var/certs/cert.pem
 
 [graph]
 duration_length = 2
