Allow config file to disable http or https port by setting port value to zero
Addresses IOPSGRAPH-47

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -2,8 +2,8 @@
 logpath = /home/chris/shared_work/Opsgraph/log
 logfile = graphtool.log
 loglevel = DEBUG
-httpport = 8880
-sslport = 8443
+httpport = 8880 # 0 to disable
+sslport = 8443 # 0 to disable
 local_ip = 50.0.96.196
 dialog_autoclose = yes
 sslKey = /var/certs/graphtool.netgeeks.net
