Moved configuration of graph sizes into config file.
Addresses IOPSGRAPH-62

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -1,9 +1,9 @@
 [general]
-logpath = /home/chris/shared_work/Opsgraph/log
+logpath = /home/chris/shared_work/opsgraph-chris/Opsgraph/log
 logfile = graphtool.log
 loglevel = DEBUG
-httpport = 8880 # 0 to disable
-sslport = 8443 # 0 to disable
+httpport = 8880
+sslport = 8443
 local_ip = 50.0.96.196
 dialog_autoclose = yes
 sslKey = /var/certs/graphtool.netgeeks.net
@@ -34,10 +34,10 @@ password = initial
 shared_secret = jds9ned893nnd9fj
 api_tool = rest/graph
 rescan = 3600
-odw_host=ng-opsview.netgeeks.net
-odw_db = odw
-odw_user = opsgraph
-odw_pass = slOt9JhD7jd8
+#odw_host=ng-opsview.netgeeks.net
+#odw_db = odw
+#odw_user = opsgraph
+#odw_pass = slOt9JhD7jd8
 
 [opsview_server_kixeye]
 name = kixeye
@@ -47,3 +47,28 @@ password = hi.there.chris
 shared_secret = 67534CD4-2969-11E0-B634-349DCCD000B0
 api_tool = rest/graph
 rescan = 3600
+
+[graphsize_small]
+name = Small
+width = 600
+height = 400
+
+[graphsize_medium]
+name = Medium
+width = 800
+height = 600
+
+[graphsize_large]
+name = Large
+width = 1000
+height = 800
+
+[graphsize_huge]
+name = Huge
+width = 1200
+height = 1000
+
+[graphsize_monsterous]
+name = Massive
+width = 1200
+height = 2400
