IOPSGRAPH-26 Node independent user authorization enhancement

--- a/etc/graphtool.conf
+++ b/etc/graphtool.conf
@@ -72,3 +72,8 @@ height = 1000
 name = Massive
 width = 1200
 height = 2400
+
+[mail]
+smtp_host = mail.graphtool.com
+permitted_domains = [mailinator.com, gmail.com]
+use_gmail = True
